[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/background_day.png" type="Texture" id=1]
[ext_resource path="res://Sprites/button_play_normal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/button_share.png" type="Texture" id=3]
[ext_resource path="res://Sprites/panel_score.png" type="Texture" id=4]
[ext_resource path="res://Sprites/label_game_over.png" type="Texture" id=5]
[ext_resource path="res://UI/GameOverScreen.gd" type="Script" id=6]
[ext_resource path="res://Font/04B_19__.TTF" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=2]
tracks/0/type = "bezier"
tracks/0/path = NodePath("TextureRect:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TextureRect:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("TextureRect:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("TextureRect:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("TextureRect2:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("TextureRect2:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 250, -0.25, 0, 0.25, 0, 95, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 72, 128 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 144.0
margin_bottom = 91.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 144.0
margin_bottom = 152.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TextureRect2"]
margin_left = 90.0
margin_top = 9.11323
margin_right = 126.0
margin_bottom = 58.1132
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="VBoxContainer/TextureRect2/VBoxContainer"]
margin_top = 6.0
margin_right = 36.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="HighScore" type="Label" parent="VBoxContainer/TextureRect2/VBoxContainer"]
margin_top = 28.0
margin_right = 36.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 144.0
margin_bottom = 185.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 76.0
margin_bottom = 29.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 29.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer"]
anims/GameOverFadeIn = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
